# protoc-gen-graphql

./: BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
descriptor/: BUILD.bazel
graphql/: BUILD.bazel
mapper/: BUILD.bazel
protobuf/google/protobuf/: BUILD.bazel
protobuf/graphql/: BUILD.bazel
testdata/basic/: BUILD.bazel
testdata/cycle/: BUILD.bazel
testdata/empty/: BUILD.bazel
testdata/extensions/: BUILD.bazel
testdata/field_name_preserve/: BUILD.bazel
testdata/grpc/: BUILD.bazel
testdata/proto2/: BUILD.bazel
testdata/root_type_prefix/: BUILD.bazel
testdata/trim_prefix/: BUILD.bazel
testdata/wrappers/: BUILD.bazel
