load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/martinxsliu/protoc-gen-graphql
gazelle(name = "gazelle")

go_library(
    name = "protoc-gen-graphql_lib",
    srcs = [
        "generator.go",
        "main.go",
    ],
    importpath = "github.com/martinxsliu/protoc-gen-graphql",
    visibility = ["//visibility:private"],
    deps = [
        "//graphql",
        "//mapper",
        "@org_golang_google_protobuf//compiler/protogen:go_default_library",
        "@org_golang_google_protobuf//types/pluginpb:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-graphql",
    embed = [":protoc-gen-graphql_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "protoc-gen-graphql_test",
    srcs = ["generator_test.go"],
)
