load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "descriptor",
    srcs = [
        "descriptor.go",
        "extensions.go",
    ],
    importpath = "github.com/martinxsliu/protoc-gen-graphql/descriptor",
    visibility = ["//visibility:public"],
    deps = [
        "//protobuf/graphql",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/descriptorpb:go_default_library",
    ],
)
