load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graphql",
    srcs = [
        "graphql.go",
        "scalars.go",
        "type_def.go",
    ],
    importpath = "github.com/martinxsliu/protoc-gen-graphql/graphql",
    visibility = ["//visibility:public"],
)

alias(
    name = "graphql_proto",
    actual = "//protobuf/graphql:graphql_proto",
    visibility = ["//visibility:public"],
)

alias(
    name = "options_proto",
    actual = "//protobuf/graphql:graphql",
    visibility = ["//visibility:public"],
)
