load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "graphql_proto",
    srcs = ["options.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
    strip_import_prefix = "/protobuf",
)

java_proto_library(
    name = "graphql_proto-java_proto",
    deps = [":graphql_proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "graphql_go_proto",
    importpath = "github.com/martinxsliu/protoc-gen-graphql/protobuf/graphql",
    proto = ":graphql_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "graphql",
    embed = [":graphql_go_proto"],
    importpath = "github.com/martinxsliu/protoc-gen-graphql/protobuf/graphql",
    visibility = ["//visibility:public"],
)
