load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "protoc_gen_graphql_test_basic_proto",
    srcs = ["input.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "protoc_gen_graphql_test_basic_go_proto",
    importpath = "github.com/martinxsliu/protoc-gen-graphql/testdata/basic",
    proto = ":protoc_gen_graphql_test_basic_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "basic",
    embed = [":protoc_gen_graphql_test_basic_go_proto"],
    importpath = "github.com/martinxsliu/protoc-gen-graphql/testdata/basic",
    visibility = ["//visibility:public"],
)
