load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "empty_proto",
    srcs = ["empty.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "empty_go_proto",
    importpath = "github.com/martinxsliu/protoc-gen-graphql/testdata/empty",
    proto = ":empty_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "empty",
    embed = [":empty_go_proto"],
    importpath = "github.com/martinxsliu/protoc-gen-graphql/testdata/empty",
    visibility = ["//visibility:public"],
)
