load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "protoc_gen_graphql_test_extensions_proto",
    srcs = ["extensions.proto"],
    visibility = ["//visibility:public"],
    deps = ["//graphql:graphql_proto"],
)

go_proto_library(
    name = "protoc_gen_graphql_test_extensions_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/martinxsliu/protoc-gen-graphql/testdata/extensions",
    proto = ":protoc_gen_graphql_test_extensions_proto",
    visibility = ["//visibility:public"],
    deps = ["//graphql:options_proto"],
)

go_library(
    name = "extensions",
    embed = [":protoc_gen_graphql_test_extensions_go_proto"],
    importpath = "github.com/martinxsliu/protoc-gen-graphql/testdata/extensions",
    visibility = ["//visibility:public"],
)
