load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "protoc_gen_graphql_test_proto2_proto",
    srcs = ["proto2.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "protoc_gen_graphql_test_proto2_go_proto",
    importpath = "github.com/martinxsliu/protoc-gen-graphql/testdata/proto2",
    proto = ":protoc_gen_graphql_test_proto2_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto2",
    embed = [":protoc_gen_graphql_test_proto2_go_proto"],
    importpath = "github.com/martinxsliu/protoc-gen-graphql/testdata/proto2",
    visibility = ["//visibility:public"],
)
